# tldcheck

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  gettld.py
src/: iana-tlds.h  main.cpp  uri.cpp  uri.h
